--- a/docs/api-events.asciidoc
+++ b/docs/api-events.asciidoc
@@ -1,4 +1,4 @@
-[[api-events]]
+[[events-api]]
 === Events intake API
 
 NOTE: Most users do not need to interact directly with the events intake API.
