--- a/docs/apm-distributed-tracing.asciidoc
+++ b/docs/apm-distributed-tracing.asciidoc
@@ -1,7 +1,7 @@
 [[apm-distributed-tracing]]
 === Distributed tracing
 
-A `trace` is a group of <<data-model-transactions,transactions>> and <<data-model-spans,spans>> with a common root.
+A `trace` is a group of <<transactions,transactions>> and <<transaction-spans,spans>> with a common root.
 Each `trace` tracks the entirety of a single request.
 When a `trace` travels through multiple services, as is common in a microservice architecture,
 it is known as a distributed trace.
