--- a/docs/jaeger-integration.asciidoc
+++ b/docs/jaeger-integration.asciidoc
@@ -108,5 +108,5 @@ When using Jaeger, features like this will not be available in the {apm-app}.
 * Elastic APM's <<data-model>> is different than Jaegers.
 For Jaeger trace data to work with Elastic's data model, we rely on spans being tagged with the appropriate
 https://github.com/opentracing/specification/blob/master/semantic_conventions.md[`span.kind`].
-** Server Jaeger spans are mapped to Elastic APM <<data-model-transactions>>.
-** Client Jaeger spans are mapped to Elastic APM <<data-model-spans>> -- unless the span is the root, in which case it is mapped to an Elastic APM <<data-model-transactions>>.
+** Server Jaeger spans are mapped to Elastic APM <<transactions>>.
+** Client Jaeger spans are mapped to Elastic APM <<transaction-spans>> -- unless the span is the root, in which case it is mapped to an Elastic APM <<transactions>>.
