--- a/docs/legacy/ssl-input-settings.asciidoc
+++ b/docs/legacy/ssl-input-settings.asciidoc
@@ -1,56 +1,98 @@
 [[agent-server-ssl]]
-=== SSL input settings
+=== SSL/TLS input settings
 
-You can specify the following options in the `apm-server.ssl` section of the +{beatname_lc}.yml+ config file.
-They apply to SSL/TLS communication between the APM Server and APM Agents.
+****
+image:./binary-yes-fm-yes.svg[supported deployment methods]
+
+Most options on this page are supported by all APM Server deployment methods.
+****
+
+These settings apply to SSL/TLS communication between the APM Server and APM Agents.
+See <<agent-tls>> to learn more.
+
+include::../tab-widgets/tls-widget.asciidoc[]
 
 [float]
-==== `enabled`
+==== Enable TLS
 
-The `enabled` setting can be used to enable the SSL configuration by setting
-it to `true`. The default value is `false`.
+Enable or disable TLS. Disabled by default.
+
+|====
+| APM Server binary | `apm-server.ssl.enabled`
+| Fleet-managed     | `Enable TLS`
+|====
 
 [float]
-==== `certificate`
+==== File path to server certificate
 
 The path to the file containing the certificate for Server authentication.
-Required if `apm-server.ssl.enabled` is `true`.
+Required if TLS is enabled.
+
+|====
+| APM Server binary | `apm-server.ssl.certificate`
+| Fleet-managed     | `File path to server certificate`
+|====
 
 [float]
-==== `key`
+==== File path to server certificate key
 
 The path to the file containing the Server certificate key.
-Required if `apm-server.ssl.enabled` is `true`.
+Required if TLS is enabled.
+
+|====
+| APM Server binary | `apm-server.ssl.key`
+| Fleet-managed     | `File path to server certificate key`
+|====
 
 [float]
-==== `key_passphrase`
+==== Key passphrase
 
-The passphrase used to decrypt an encrypted key stored in the configured `key` file.
+The passphrase used to decrypt an encrypted key stored in the configured `apm-server.ssl.key` file.
+
+|====
+| APM Server binary | `apm-server.ssl.key_passphrase`
+| Fleet-managed     | N/A
+|====
 
 [float]
-==== `supported_protocols`
+==== Supported protocol versions
 
 This setting is a list of allowed protocol versions:
 `SSLv3`, `TLSv1.0`, `TLSv1.1`, `TLSv1.2` and `TLSv1.3`. We do not recommend using `SSLv3` or `TLSv1.0`.
 The default value is `[TLSv1.1, TLSv1.2, TLSv1.3]`.
 
+|====
+| APM Server binary | `apm-server.ssl.supported_protocols`
+| Fleet-managed     | `Supported protocol versions`
+|====
+
 [float]
-==== `cipher_suites`
+==== Cipher suites for TLS connections
 
 The list of cipher suites to use. The first entry has the highest priority.
 If this option is omitted, the Go crypto library's https://golang.org/pkg/crypto/tls/[default suites]
 are used (recommended). Note that TLS 1.3 cipher suites are not
 individually configurable in Go, so they are not included in this list.
 
+|====
+| APM Server binary | `apm-server.ssl.cipher_suites`
+| Fleet-managed     | `Cipher suites for TLS connections`
+|====
+
 include::{libbeat-dir}/shared-ssl-config.asciidoc[tag=cipher_suites]
 
 [float]
-==== `curve_types`
+==== Curve types for ECDHE based cipher suites
 
 The list of curve types for ECDHE (Elliptic Curve Diffie-Hellman ephemeral key exchange).
 
+|====
+| APM Server binary | `apm-server.ssl.curve_types`
+| Fleet-managed     | `Curve types for ECDHE based cipher suites`
+|====
+
 [float]
-==== `certificate_authorities`
+==== List of root certificates for verifying client certificates
 
 The list of root certificates for verifying client certificates.
 If `certificate_authorities` is empty or not set, the trusted certificate authorities of the host system are used.
@@ -59,8 +101,13 @@ Sending client certificates is currently only supported by the RUM agent through
 the Java agent (see {apm-java-ref-v}/ssl-configuration.html[Agent certificate authentication]),
 and the Jaeger agent.
 
+|====
+| APM Server binary | `apm-server.ssl.certificate_authorities`
+| Fleet-managed     | N/A
+|====
+
 [float]
-==== `client_authentication`
+==== Client authentication
 
 This configures what types of client authentication are supported. The valid options
 are `none`, `optional`, and `required`. The default is `none`.
@@ -73,3 +120,8 @@ and the Jaeger agent.
 * `none` - Disables client authentication.
 * `optional` - When a client certificate is given, the server will verify it.
 * `required` - Requires clients to provide a valid certificate.
+
+|====
+| APM Server binary | `apm-server.ssl.client_authentication`
+| Fleet-managed     | N/A
+|====
