--- a/docs/legacy/copied-from-beats/docs/shared-ssl-config.asciidoc
+++ b/docs/legacy/copied-from-beats/docs/shared-ssl-config.asciidoc
@@ -4,7 +4,7 @@
 ****
 image:./binary-yes-fm-no.svg[supported deployment methods]
 
-These configuration options are only relevant to APM Server binary users.
+These configuration options are only relevant to APM Server binary users. Fleet-managed users should see the {fleet-guide}/fleet-settings.html[Fleet output settings].
 ****
 
 You can specify SSL/TLS options with any output that supports SSL, like {es}, {ls}, or Kafka.
