--- a/docs/jaeger-integration.asciidoc
+++ b/docs/jaeger-integration.asciidoc
@@ -47,7 +47,7 @@ IMPORTANT: There are <<caveats-jaeger,caveats>> to this integration.
 
 The APM integration serves Jaeger gRPC over the same host and port as the Elastic {apm-agent} protocol.
 
-include::./shared/jaeger/jaeger-widget.asciidoc[]
+include::{tab-widget-dir}/jaeger-widget.asciidoc[]
 
 [float]
 [[configure-sampling-jaeger]]
