--- a/docs/secret-token.asciidoc
+++ b/docs/secret-token.asciidoc
@@ -24,7 +24,7 @@ as there is no way to prevent them from being publicly exposed.
 NOTE: {ess} and {ece} deployments provision a secret token when the deployment is created.
 The secret token can be found and reset in the {ecloud} console under **Deployments** -- **APM & Fleet**.
 
-include::./tab-widgets/secret-token-widget.asciidoc[]
+include::{tab-widget-dir}/secret-token-widget.asciidoc[]
 
 [[configure-secret-token]]
 [float]
