--- a/docs/integrations-index.asciidoc
+++ b/docs/integrations-index.asciidoc
@@ -63,7 +63,7 @@ include::apm-overview.asciidoc[]
 
 include::apm-quick-start.asciidoc[]
 
-include::./legacy/getting-started-apm-server.asciidoc[]
+include::{docdir}/getting-started-apm-server.asciidoc[]
 
 include::data-model.asciidoc[]
 
@@ -77,7 +77,7 @@ include::manage-storage.asciidoc[]
 
 include::configure/index.asciidoc[leveloffset=+1]
 
-include::./legacy/setting-up-and-running.asciidoc[]
+include::{docdir}/setting-up-and-running.asciidoc[]
 
 include::secure-comms.asciidoc[]
 
@@ -91,4 +91,4 @@ include::upgrading.asciidoc[]
 
 include::release-notes.asciidoc[leveloffset=+1]
 
-include::./legacy/redirects.asciidoc[]
+include::{docdir}/redirects.asciidoc[]
