--- a/docs/metricset-indices.asciidoc
+++ b/docs/metricset-indices.asciidoc
@@ -133,6 +133,6 @@ These fields make it possible to search and aggregate across various dimensions,
 
 [source,json]
 ----
-include::../data/elasticsearch/metricset.json[]
+include::{docdir}/data/elasticsearch/metricset.json[]
 ----
 // end::example[]
