--- a/docs/configure/outputs/logstash.asciidoc
+++ b/docs/configure/outputs/logstash.asciidoc
@@ -405,4 +405,4 @@ The maximum number of seconds to wait before attempting to connect to
 {ls} after a network error. The default is `60s`.
 
 // Logstash security
-include::../../legacy/copied-from-beats/docs/shared-ssl-logstash-config.asciidoc[]
+include::{docdir}/shared-ssl-logstash-config.asciidoc[]
