--- a/docs/ssl-input-settings.asciidoc
+++ b/docs/ssl-input-settings.asciidoc
@@ -10,7 +10,7 @@ Most options on this page are supported by all APM Server deployment methods.
 These settings apply to SSL/TLS communication between the APM Server and APM Agents.
 See <<agent-tls>> to learn more.
 
-include::../tab-widgets/tls-widget.asciidoc[]
+include::{tab-widget-dir}/tls-widget.asciidoc[]
 
 [float]
 ==== Enable TLS
