Use "dynamic: runtime" instead of strict mapping for internal, TBS, and aggregation indices

--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -21,3 +21,4 @@ https://github.com/elastic/apm-server/compare/8.8\...main[View commits]
 - Span events now carry `host` and `service.version` attributes. {pull}10697[10697]
 - Accept more options in agentcfg ES config; Reliably use `agent.config.elasticsearch` and `rum.source_mapping.elasticsearch` credentials when merging with `output.elasticsearch` credentials {pull}10783[10783]
 - Emit service destination metrics when only `service.target.*` fields are set. {pull}10922[10922]
+- Use "dynamic: runtime" instead of strict mapping for internal, TBS, and aggregation indices {pull}10968[10968]
