docs: Fix file structure (#10965)
(cherry picked from commit e81f660201f516eab9d012a90aff8a7a1220ef6a)

fix conflict

--- a/docs/api-keys.asciidoc
+++ b/docs/api-keys.asciidoc
@@ -26,7 +26,7 @@ make sure <<agent-tls,TLS>> is enabled, then complete these steps:
 [float]
 === Enable API keys
 
-include::./tab-widgets/api-key-widget.asciidoc[]
+include::{tab-widget-dir}/api-key-widget.asciidoc[]
 
 [[create-api-key-user]]
 [float]
@@ -131,7 +131,7 @@ Keys created using this method can only be used for communication with APM Serve
 [float]
 ===== `apikey` subcommands
 
-include::{libbeat-dir}/command-reference.asciidoc[tag=apikey-subcommands]
+include::{docdir}/command-reference.asciidoc[tag=apikey-subcommands]
 
 [[create-api-key-privileges]]
 [float]
