--- a/docs/common-problems.asciidoc
+++ b/docs/common-problems.asciidoc
@@ -15,7 +15,7 @@ This section describes common problems you might encounter when using a Fleet-ma
 
 If no data shows up in {es}, first make sure that your APM components are properly connected.
 
-include::./tab-widgets/no-data-indexed-widget.asciidoc[]
+include::{tab-widget-dir}/no-data-indexed-widget.asciidoc[]
 
 [[data-indexed-no-apm-legacy]]
 [float]
@@ -56,7 +56,7 @@ If the `mapping.name.type` is `"text"`, your APM indices were not set up correct
 To fix this problem, install the APM integration by following these steps:
 
 --
-include::./legacy/getting-started-apm-server.asciidoc[tag=install-apm-integration]
+include::{docdir}/getting-started-apm-server.asciidoc[tag=install-apm-integration]
 --
 
 This will reinstall the APM index templates and trigger a data stream index rollover.
