--- a/docs/configure/tls.asciidoc
+++ b/docs/configure/tls.asciidoc
@@ -9,7 +9,7 @@ SSL/TLS is available for:
 Additional information on getting started with SSL/TLS is available in <<securing-apm-server>>.
 
 // :leveloffset: +2
-include::{libbeat-dir}/shared-ssl-config.asciidoc[]
+include::{docdir}/shared-ssl-config.asciidoc[]
 // :leveloffset: -2
 
-include::../legacy/ssl-input-settings.asciidoc[leveloffset=-1]
+include::{docdir}/ssl-input-settings.asciidoc[leveloffset=-1]
