--- a/docs/getting-started-apm-server.asciidoc
+++ b/docs/getting-started-apm-server.asciidoc
@@ -138,7 +138,7 @@ image::./images/fm-ov.png[APM Server fleet overview]
 Use the decision tree below to help determine which method of configuring and running the APM Server is best for your use case.
 
 [subs=attributes+]
-include::../diagrams/apm-decision-tree.asciidoc[APM Server decision tree]
+include::{docdir}/diagrams/apm-decision-tree.asciidoc[APM Server decision tree]
 
 
 === APM Server binary
@@ -440,10 +440,10 @@ you can start visualizing your data in the {kibana-ref}/xpack-apm.html[{apm-app}
 If you're migrating from Jaeger, see <<jaeger-integration>>.
 
 // Shared APM & YUM
-include::{libbeat-dir}/repositories.asciidoc[]
+include::{docdir}/repositories.asciidoc[]
 
 // Shared docker
-include::{libbeat-dir}/shared-docker.asciidoc[]
+include::{docdir}/shared-docker.asciidoc[]
 
 
 === Fleet-managed APM Server
@@ -493,7 +493,7 @@ This should match the secret token defined when setting up the APM integration.
 TIP: You can edit your APM integration settings if you need to change the APM Server URL
 or secret token to match your APM agents.
 
-include::./tab-widgets/install-agents-widget.asciidoc[]
+include::{tab-widget-dir}/install-agents-widget.asciidoc[]
 
 ==== Step 4: View your data
 
@@ -501,4 +501,4 @@ Back in {kib}, under {observability}, select APM.
 You should see application performance monitoring data flowing into the {stack}!
 
 [role="screenshot"]
-image::./guide/images/kibana-apm-sample-data.png[{apm-app} with data]
+image::./images/kibana-apm-sample-data.png[{apm-app} with data]
