add changelog entry

--- a/changelogs/head.asciidoc
+++ b/changelogs/head.asciidoc
@@ -11,6 +11,7 @@ https://github.com/elastic/apm-server/compare/8.8\...main[View commits]
 
 [float]
 ==== Bug fixes
+- Limit the amount of concurrent OTLP requests being processed in parallel {pull}10987[10987].
 
 [float]
 ==== Intake API Changes
