--- a/docs/metricset-indices.asciidoc
+++ b/docs/metricset-indices.asciidoc
@@ -52,10 +52,10 @@ You can filter and group by these dimensions:
 To power {kibana-ref}/xpack-apm.html[{apm-app}] visualizations,
 APM Server aggregates transaction events into latency distribution metrics.
 
-*`transaction.duration.histogram`*::
+*`transaction.duration.summary`* and *`transaction.duration.histogram`*::
 +
 --
-This metric measures the latency distribution of transaction groups,
+These metric measures the aggregated latency and latency distribution of transaction groups,
 used to power visualizations and analytics in Elastic APM.
 
 These metric documents can be identified by searching for `metricset.name: transaction`.
@@ -66,6 +66,7 @@ You can filter and group by these dimensions (some of which are optional, for ex
 * `transaction.type`: The type of the transaction, for example `request`
 * `transaction.result`: The result of the transaction, for example `HTTP 2xx`
 * `transaction.root`: A boolean flag indicating whether the transaction is the root of a trace
+* `metricset.interval`: A string with the aggregation interval the metricset represents.
 * `event.outcome`: The outcome of the transaction, for example `success`
 * `agent.name`: The name of the {apm-agent} that instrumented the transaction, for example `java`
 * `service.name`: The name of the service that served the transaction
@@ -89,8 +90,41 @@ You can filter and group by these dimensions (some of which are optional, for ex
 * `cloud.project.id`: The cloud project identifier of the service that served the transaction
 * `cloud.project.name`: The cloud project name of the service that served the transaction
 * `cloud.service.name`: The cloud service name of the service that served the transaction
-* `faas.coldstart`: Whether the _serverless_ service that served the transaction had a cold start.
-* `faas.trigger.type`: The trigger type that the function / lambda was executed by of the service that served the transaction
+* `faas.coldstart`: Whether the _serverless_ service that served the transaction had a cold start
+* `faas.trigger.type`: The trigger type that the lambda function was executed by of the service that served the transaction
+* `faas.id`: The unique identifier of the invoked serverless function
+* `faas.name`: The name of the lambda function
+* `faas.version`: The version of the lambda function
+* `labels`: Key-value object containing string labels set globally by the APM agents.
+* `numeric_labels`: Key-value object containing numeric labels set globally by the APM agents.
+--
+
+The `@timestamp` field of these documents holds the start of the aggregation interval.
+
+[float]
+==== Service-transaction metrics
+
+To power {kibana-ref}/xpack-apm.html[{apm-app}] visualizations,
+APM Server aggregates transaction events into service-transaction metrics.
+
+*`transaction.duration.summary`* and *`transaction.duration.histogram`*::
++
+--
+These metric measures the aggregated latency and latency distribution of service transaction groups,
+used to power visualizations and analytics in Elastic APM.
+
+These metric documents can be identified by searching for `metricset.name: service_transaction`.
+
+You can filter and group by these dimensions:
+
+* `agent.name`: The name of the {apm-agent} that instrumented the operation, for example `java`
+* `service.name`: The name of the service that made the request
+* `service.environment`: The environment of the service that made the request
+* `service.language.name`: The language name of the service that served the transaction, for example `Go`
+* `transaction.type`: The type of the enclosing transaction, for example `request`
+* `metricset.interval`: A string with the aggregation interval the metricset represents.
+* `labels`: Key-value object containing string labels set globally by the APM agents.
+* `numeric_labels`: Key-value object containing numeric labels set globally by the APM agents.
 --
 
 The `@timestamp` field of these documents holds the start of the aggregation interval.
@@ -99,7 +133,7 @@ The `@timestamp` field of these documents holds the start of the aggregation int
 ==== Service-destination metrics
 
 To power {kibana-ref}/xpack-apm.html[{apm-app}] visualizations,
-APM Server aggregates span events into "service destination" metrics.
+APM Server aggregates span events into service-destination metrics.
 
 *`span.destination.service.response_time.count`* and *`span.destination.service.response_time.sum.us`*::
 +
@@ -113,11 +147,38 @@ These metric documents can be identified by searching for `metricset.name: servi
 You can filter and group by these dimensions:
 
 * `span.destination.service.resource`: The destination service resource, for example `mysql`
+* `span.name`: The name of the operation, for example `SELECT FROM table_name`.
 * `event.outcome`: The outcome of the operation, for example `success`
 * `agent.name`: The name of the {apm-agent} that instrumented the operation, for example `java`
 * `service.name`: The name of the service that made the request
 * `service.environment`: The environment of the service that made the request
+* `service.target.name`: The target service name, for example `customer_db`
+* `service.target.type`: The target service type, for example `mysql`
+* `metricset.interval`: A string with the aggregation interval the metricset represents.
+* `labels`: Key-value object containing string labels set globally by the APM agents.
+* `numeric_labels`: Key-value object containing numeric labels set globally by the APM agents.
 --
+
+The `@timestamp` field of these documents holds the start of the aggregation interval.
+
+[float]
+==== Service-summary metrics
+
+To power {kibana-ref}/xpack-apm.html[{apm-app}] visualizations,
+APM Server aggregates transaction, error, log, and metric events into service-summary metrics.
+
+These metric documents can be identified by searching for `metricset.name: service_summary`.
+
+You can filter and group by these dimensions:
+
+* `agent.name`: The name of the {apm-agent} that instrumented the operation, for example `java`
+* `service.name`: The name of the service that made the request
+* `service.environment`: The environment of the service that made the request
+* `service.language.name`: The language name of the service that served the transaction, for example `Go`
+* `metricset.interval`: A string with the aggregation interval the metricset represents.
+* `labels`: Key-value object containing string labels set globally by the APM agents.
+* `numeric_labels`: Key-value object containing numeric labels set globally by the APM agents.
+
 
 The `@timestamp` field of these documents holds the start of the aggregation interval.
 
