--- a/docs/data-model.asciidoc
+++ b/docs/data-model.asciidoc
@@ -291,7 +291,7 @@ APM Server aggregates transaction events into latency distribution metrics.
 *`transaction.duration.summary`* and *`transaction.duration.histogram`*::
 +
 --
-These metric measures the aggregated latency and latency distribution of transaction groups,
+These metrics measure the aggregated latency and latency distribution of transaction groups,
 used to power visualizations and analytics in Elastic APM.
 
 These metric documents can be identified by searching for `metricset.name: transaction`.
@@ -346,7 +346,7 @@ APM Server aggregates transaction events into service-transaction metrics.
 *`transaction.duration.summary`* and *`transaction.duration.histogram`*::
 +
 --
-These metric measures the aggregated latency and latency distribution of service transaction groups,
+These metrics measure the aggregated latency and latency distribution of service transaction groups,
 used to power visualizations and analytics in Elastic APM.
 
 These metric documents can be identified by searching for `metricset.name: service_transaction`.
