--- a/docs/data-model.asciidoc
+++ b/docs/data-model.asciidoc
@@ -291,7 +291,7 @@ APM Server aggregates transaction events into latency distribution metrics.
 *`transaction.duration.summary`* and *`transaction.duration.histogram`*::
 +
 --
-These metrics measure the aggregated latency and latency distribution of transaction groups,
+These metrics represent the latency summary and latency distribution of transaction groups,
 used to power visualizations and analytics in Elastic APM.
 
 These metric documents can be identified by searching for `metricset.name: transaction`.
